# letters-of-rec

./: .gitignore  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  README.md  REFACTORING_PROMPTS.md  TODO.md  cli.py  pyproject.toml  requirements.txt
examples/: letter_draft_example.md  student_packet_example.md  style_guide_example.md
lor/: __init__.py  cli.py  extract_style.py  file_utils.py  generate_letter.py  llm.py  redact_student_info.py  synthesize_packet.py
prompts/: extract_style_guide.md  generate_letter.md  redact_student_info.md  synthesize_student_packet.md
templates/: professor_notes.md
tests/: test_extract_style.py  test_redaction.py  test_redaction_mock.py
tests/manual/: test_phase1_manual.py  test_phase2_manual.py  test_phase3_manual.py
